--- a/OOPSnakeGame/OOPSnakeGame.csproj
+++ b/OOPSnakeGame/OOPSnakeGame.csproj
@@ -46,8 +46,10 @@
     <Compile Include="Food.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Progress.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Snake.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
